# nootka

./: .clang-format  .directory  .gitignore  .gitlab-ci.yml  .hgignore  AppImageBuilder.yml  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt-recorditnow  CMakeLists.txt-speed  CMakeLists.txt.user.1.3  CMakeLists.txt.user.1fc7cee  CMakeLists.txt.user.2d2fd47  CMakeLists.txt.user.8331211  CMakeLists.txt.user.orig  CONTRIBUTING.md  LICENSE  MUSICXML_SEGFAULT_FIX.md  Nootka.desktop  README  README.md  TODO  TODO.md  TODO.txt  changelog  changes  changeslog  copyright  gpl  nootka-0.7.0.deb  nootka-font-occurs  nootka.kdev4  nootka.pro  nootka.qrc  nootka.xml  pl.ts  test.noo  testimonial.html  x-kdeuser4.xml
lang/: CMakeLists.txt  how-to-translate.md  how-to-translate.txt  lang-release.sh  lang-update.sh  nootka_cs-withObsolete.ts  nootka_cs.qm  nootka_cs.ts  nootka_de.po  nootka_de.qm  nootka_de.ts  nootka_en_toReview.ts  nootka_es.qm  nootka_es.ts  nootka_fr-good-octave.ts  nootka_fr.qm  nootka_fr.ts  nootka_hu.qm  nootka_hu.ts  nootka_it.qm  nootka_it.ts  nootka_nb.ts  nootka_nb_NO.ts  nootka_pl.qm  nootka_pl.ts  nootka_pt.ts  nootka_ro.ts  nootka_ru-new.ts  nootka_ru.qm  nootka_ru.ts  nootka_sl.qm  nootka_sl.ts  nootka_ta.ts  nootka_uk.qm  nootka_uk.ts  nootka_xx.ts  nootka_xx_from_luster-orig.ts  nootka_xx_from_luster.ts  qtbase_cs.qm  qtbase_de.qm  (+11 more)
mime/: CMakeLists.txt  install-mime.sh  nel-noo.sh  nel.sh  noo.sh  nootka.appdata.xml  nootka.desktop  nootka.xml  x-nootka-nel.xml  x-nootka-noo.xml
packaging/: CMakeLists.txt  CMakeLists.txt-mscooore  NSIS.template.in  build-deb.sh  build-rpm.sh  chl.sh  cpack.cmake  def.nsi  fileasoc.nsh  getLastChangesSet.sh  make-build-tree.sh  make-chlog.sh  make-noinstall.sh  nootka  nootka-7.5.nsi  nootka-UTF.nsi  nootka-desc  nootka.1  nootka.nsi  nootka:1
packaging/appimage/: make-appimage.sh  qt.conf
packaging/debian/: changelog  control.sh  copyright  postinst  postrm
packaging/mac/: Info.plist  InfoPlist.strings  create-dmg.sh  grabInfo.sh  install.sh  linking.sh  makeInfoPlist.sh  qt.conf
packaging/mingw-w64/: nootka-mingw-w64.sh
packaging/nsis/: LICENSE-utf16le  build_installer.ps1  definitions.nsh.in  nootka-1250.nsi  nootka-1250.nsi-ok  nootka-UTF.nsi  nootka-utf16.nsi  nootka-utf8.nsi  nootka.nsi  qt.conf
packaging/rpm/: CMakeLists-Suse.txt  CMakeLists-fedora.txt  nootka.spec.in  rpm-post.sh  spec.sh
packaging/src/: make-src.sh
src/: .CMakeLists.txt.kate-swp  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  nootka-android.qrc  nootka.qrc  nootkaconfig.h.in  qappmac.cpp  qappmac.h  scoresetttingsdlg.cpp  scoresetttingsdlg.h  settingsdialog.cpp  settingsdialog.h  src.pro  tfingerboard.cpp  tfingerboard.h  tfingerpos.cpp  tfingerpos.h  tglobals.cpp  tglobals.h  tkeysignatureview.cpp  tmainview.cpp  tmainview.h  tnote.cpp  tnote.h  tnotename.cpp  tnotename.h  tnoteview.cpp  tnoteview.h  trightclickfilter.cpp  trightclickfilter.h  tscorewidget.cpp  tscorewidget.h  tscorewidgetsimple.cpp  tscorewidgetsimple.h  tsettingsdialogbase.cpp  ttickcolors.cpp  ttickcolors.h  (+5 more)
src/Java-TODO/: ToutVolume.java  TshareExam.java  Ttoast.java
src/analyser/: CMakeLists.txt  main.cpp  tabstarctaxis.cpp  tabstarctaxis.h  tabstractaxis.cpp  tabstractaxis.h  tanalyswdg.cpp  tanalyswdg.h  tanalyswindow.cpp  tanalyswindow.h  taxis.cpp  taxis.h  tbasechart.cpp.orig  tchart.cpp  tchart.h  texam.cpp  texamlevel.cpp  tmainchart.cpp  tmainchart.cpp.orig  tmainchart.h  tquestionpoint.cpp  tquestionpoint.h  tyaxis.cpp  tyaxis.h
src/android/: AndroidManifest-nootka.xml  AndroidManifest.xml  build.gradle  gradle.properties~  local.properties~
src/android21/: AndroidManifest.xml  build.gradle  src
src/animations/: tabstractanim.cpp  tabstractanim.h  tanimeditem.cpp  tanimeditem.h  tanimedtextitem.cpp  tanimedtextitem.h  tblinkingitem.cpp  tblinkingitem.h  tcoloredanim.cpp  tcoloredanim.h  tcombinedanim.cpp  tcombinedanim.h  tcrossfadetextanim.h  tfadeinanim.h  tgraphicsstrikeitem.cpp  tgraphicsstrikeitem.h  tmorphedanim.h  tmovedanim.cpp  tmovedanim.h  tscaledanim.cpp  tscaledanim.h  tstrikedoutitem.cpp  tstrikedoutitem.h  tthrownitem.cpp  tthrownitem.h
src/audio/: taudioanalyzeitem.cpp
src/charts/: CMakeLists.txt  charts.qrc  main.cpp  sorting.cpp  sorting.h  tabstractaxis.cpp  tabstractaxis.h  tanalysdialog.cpp  tanalysdialog.cpp.orig  tanalysdialog.h  taxis.h  tbar.cpp  tbar.h  tbarchart.cpp  tbarchart.h  tbarchartdelegate.cpp  tbarchartdelegate.h  tbasechart.cpp  tbasechart.h  tchart.cpp  tchart.h  tchartitem.cpp  tchartitem.h  tcharttipitem.cpp  tcharttipitem.h  tdropshadoweffect.cpp  tdropshadoweffect.h  tgraphicsline.cpp  tgraphicsline.h  tgraphicstexttip.cpp  tgraphicstexttip.h  tgroupedqaunit.cpp  tgroupedqaunit.h  tlinchartdelegate.cpp  tlinchartdelegate.h  tlinearchart.cpp  tlinearchart.h  tmainchart.cpp  tmainchart.h  tmainline.cpp  (+21 more)
src/core/: CMakeLists.txt  android-picts.qrc  changes  mobile  nootkaconfig.h  picts  qtr.h  taction.cpp  taction.h  texamparams.h  tfingerpos.cpp  tfingerpos.h  tinitcorelib.h  tlayoutparams.h  tnoofont.cpp  tnootkaqml.cpp  tnootkaqml.h  tpath.cpp  tpath.h
src/dialogs/: tdialogloaderobject.cpp  tdialogloaderobject.h  tlevelcreatoritem.cpp  tlevelcreatoritem.h  tlevelheaderwdg.cpp  tlevelheaderwdg.h  tlevelpreviewitem.cpp  tlevelpreviewitem.h  tlevelsdefs.cpp  tlevelsdefs.h  tlevelselector.cpp  tlevelselector.h  tmelgenitem.cpp  tmelgenitem.h  tmelodyimportitem.cpp  tmelodyimportitem.h  tmelodylistview.cpp  tmelodylistview.h  tmelodywrapper.cpp  tmelodywrapper.h  trtmselectoritem.cpp  trtmselectoritem.h  ttunerdialogitem.cpp  ttunerdialogitem.h
src/exam/: examsettingsdlg.cpp  examsettingsdlg.h  levelsettings.cpp  levelsettings.h  questionssettings.cpp  questionssettings.h  rangesettings.cpp  rangesettings.h  tanimedtextitem.cpp  tanimedtextitem.h  tcanvas.cpp  tcanvas.h  tdialogmessage.cpp  tdialogmessage.h  tequalrand.cpp  tequalrand.h  texam.cpp  texam.h  texamexecutor.cpp  texamexecutor.h  texamlevel.cpp  texamlevel.h  texammelody.cpp  texammelody.h  (+50 more)
(+1873 files in other folders)
